--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -1,16 +1,20 @@
 :root {
     --fondo-logo: #EBAD6E;
-    /* Colores del boton */
     --marron-oscuro: #4a3322;
     --blanco-rosita: #fff0f0;
     --naranja-bordes: #f3b054;
 }
 
+
+
 h4 {
     font-size: 14px !important;
 }
+
 body {
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .hidden {
@@ -71,6 +75,7 @@ nav ul {
     text-align: center;
     align-items: center;
 }
+
 nav ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
@@ -88,20 +93,22 @@ nav ul li {
     text-align: center;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 nav ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
-nav ul li:nth-child(2){
+
+nav ul li:nth-child(2) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .container {
     display: flex;
     flex-direction: column;
@@ -109,14 +116,16 @@ nav ul li:nth-child(2){
     align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
+    height: 870px;
+    width: 100%;
 }
 
 .container-Favmichis {
     margin: 20px;
     padding: 14px;
-    width: 100%;
     height: 100%;
 }
+
 .mensajito {
     width: 100%;
     height: 100%;
@@ -135,6 +144,7 @@ nav ul li:nth-child(2){
     background-color: #f3b15473;
     margin: 0;
 }
+
 .mensajito p a {
     font-weight: bold;
     color: #f3b054;
@@ -143,9 +153,10 @@ nav ul li:nth-child(2){
     text-decoration: none;
     cursor: pointer;
 }
+
 .container-Favmichis .michi-card {
-    width: 180px;
-    height: 180px;
+    width: 250px;
+    height: 250px;
     margin: 10px;
     overflow: hidden;
     border-radius: 8px;
@@ -154,11 +165,10 @@ nav ul li:nth-child(2){
 }
 
 .michi-card img {
-    width: 180px;
-    height: 180px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     z-index: 2;
-
 }
 
 .michi-card .like-michi {
@@ -173,6 +183,55 @@ nav ul li:nth-child(2){
     bottom: 10px;
     border-radius: 50%;
     border: 0;
+}
+
+
+.like-michi {
+    font-size: 20px;
+    transition: transform 0.3s;
+}
+
+.like-michi:hover {
+    transform: scale(1.2);
+}
+
+.like-michi:active {
+    animation: change-text 0.5s forwards;
+}
+
+@keyframes change-text {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+.mensaje-guardado {
+    width: 350px;
+    text-align: center;
+    position: fixed;
+    bottom: 10%;
+    right: 10px;
+    transform: translateX(-50%);
+    background-color: #d38740;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 10;
+}
+
+.mensaje-guardado.mostrar {
+    opacity: 1;
 }
 
 footer {
@@ -252,6 +311,7 @@ footer .credits ul li a {
 footer .credits ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
 footer .bye-message {
     width: 33.33%;
     height: 100%;
@@ -267,8 +327,13 @@ footer .bye-message p {
     text-align: justify;
     color: rgb(253, 252, 252);
 }
+
+.more-michis-button {
+    display: flex;
+    justify-content: center;
+}
+
 .more-michis-button button {
-    position: relative;
     display: inline-block;
     cursor: pointer;
     outline: none;
@@ -280,6 +345,7 @@ footer .bye-message p {
 }
 
 .more-michis-button button.learn-more {
+    margin-top: 50px;
     font-weight: 600;
     color: #ecb289;
     text-transform: uppercase;
