--- a/CSS/videos.css
+++ b/CSS/videos.css
@@ -1,10 +1,11 @@
 :root {
     --fondo-logo: #EBAD6E;
-    /* Colores del boton */
-    --marron-oscuro: #4a3322;
-    --blanco-rosita: #fff0f0;
     --naranja-bordes: #f3b054;
 }
+
+/* * {
+    outline: 1px dashed red;
+} */
 
 body {
     margin: 0;
@@ -57,6 +58,7 @@ nav ul {
     text-align: center;
     align-items: center;
 }
+
 nav ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
@@ -68,7 +70,6 @@ nav ul a:hover {
 
 nav ul li {
     display: flex;
-    font-weight: bold;
     width: 25%;
     height: 100%;
     text-align: center;
@@ -80,7 +81,8 @@ nav ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
-nav ul li:nth-child(3){
+
+nav ul li:nth-child(3) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -89,19 +91,58 @@ nav ul li:nth-child(3){
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-top: 30px;
 }
 
-.random-videos {
-    width: 100%;
-    height: 400px;
+.card-product {
+    width: 200px;
+    height: 300px;
+}
+
+.product-preview {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 60%;
+    font-size: 12px;
+}
+
+.product-preview img {
+    width: 50%;
+    height: 100%;
+}
+
+.product-preview .product-info {
+    display: flex;
+    flex-direction: column;
+}
+.product-preview .product-info p:nth-child(1){
+    font-weight: bold;
+    text-align: start;
+    font-size: 10px;
+}
+
+.product-preview .product-info p:nth-child(2){
+    font-size: 8px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.card-product .instrucciones {
+    width: 100%;
+    height: 15%;
+    background-color: red;
+    padding: 4px;
+
+}
+.card-product .instrucciones p {
+    width: 100%;
+    height: 100%;
+    font-size: 8px;
+    text-align: justify;
+    
 }
 
 footer {
@@ -181,6 +222,7 @@ footer .credits ul li a {
 footer .credits ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
 footer .bye-message {
     width: 33.33%;
     height: 100%;
