--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -135,11 +135,9 @@ nav ul li:nth-child(2) {
 
 .mensajito p {
     border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
     width: 580px;
-    height: 40px;
+    height: 100px;
     background-color: #f3b15473;
     margin: 0;
 }
@@ -241,6 +239,9 @@ footer {
     height: 240px;
     background-color: var(--fondo-logo);
     padding: 30px;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
 }
 
 footer .social-networks {
@@ -400,4 +401,98 @@ footer .bye-message p {
     box-shadow: 0 0 0 2px var(--naranja-bordes), 0 0 #fff3e2;
     -webkit-transform: translate3d(0, 0, -1em);
     transform: translate3d(0, 0, -1em);
+}
+
+
+@media (max-width: 560px) {
+    .container {
+        height: auto;
+    }
+
+    .mensajito p {
+        padding: 10px;
+        width: 350px;
+        height: 100px;
+        font-size: 12px;
+        text-align: justify;
+    }
+    .mensajito p a {
+        margin: 0;
+
+    }
+
+    .menu-desktop {
+        display: none;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 561px) and (max-width: 760px){
+    .container {
+        height: auto;
+    }
+    
+    .container-Favmichis .michi-card {
+        width: 180px;
+        height: 180px;
+    }
+
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1080px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 250px;
+        height: 250px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 1081px){
+    .container {
+        height: auto;
+    }
+    
+    .container-Favmichis .michi-card {
+        width: 300px;
+        height: 300px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
 }
