--- a/mobile.css
+++ b/mobile.css
@@ -1,12 +1,13 @@
-.menu-mobile {
+.aside-menu-mobile {
     display: flex;
     align-items: center;
     background-color: bisque;
+    border: 1px solid red;
     width: 200px;
     height: 200px;
 }
 
-.menu-mobile ul {
+.aside-menu-mobile ul {
     display: flex;
     width: 100%;
     height: 100%;
@@ -17,7 +18,7 @@
     padding: 0;
 }
 
-.menu-mobile ul li {
+.aside-menu-mobile ul li {
     width: 100%;
     height: 25%;
     background-color: aquamarine;
@@ -26,6 +27,6 @@
     justify-content: center;
 }
 
-.menu-mobile ul li:hover {
+.aside-menu-mobile ul li:hover {
     background-color: antiquewhite;
 }
