--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -93,6 +93,48 @@ nav ul li:nth-child(4) {
 }
 
 
+.aside-menu-mobile {
+    display: flex;
+    align-items: center;
+    background-color: var(--naranja-bordes);
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    overflow: hidden;
+    border-bottom-right-radius: 8px;
+    z-index: 11;
+}
+
+.aside-menu-mobile ul {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.aside-menu-mobile ul li {
+    width: 100%;
+    height: 25%;
+    background-color: var(--fondo-logo);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.aside-menu-mobile ul li a {
+    text-decoration: none;
+    color: #f6e7d6;
+}
+
+.aside-menu-mobile ul li:hover {
+    background-color: rgb(255, 181, 91);
+}
+
+
 .container {
     display: flex;
     flex-direction: column;
