--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -39,7 +39,7 @@ header img {
     width: 100%;
 }
 
-nav {
+.menu-desktop  {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -49,7 +49,7 @@ nav {
     box-shadow: 0 0 8px 0 #373737;
 }
 
-nav figure {
+.menu-desktop figure {
     display: flex;
     width: 20%;
     height: 100%;
@@ -58,13 +58,13 @@ nav figure {
     align-items: center;
 }
 
-nav figure img {
+.menu-desktop figure img {
     width: 150px;
     height: 70px;
     object-fit: cover;
 }
 
-nav ul {
+.menu-desktop  ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -76,31 +76,30 @@ nav ul {
     align-items: center;
 }
 
-nav ul a {
+.menu-desktop  ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
 
-nav ul a:hover {
+.menu-desktop  ul a:hover {
     cursor: pointer;
 }
 
-nav ul li {
+.menu-desktop  ul li {
     display: flex;
     width: 25%;
     height: 100%;
     text-align: center;
     align-items: center;
     justify-content: center;
-
 }
 
-nav ul li:hover {
+.menu-desktop  ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
 
-nav ul li:nth-child(2) {
+.menu-desktop  ul li:nth-child(2) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -108,6 +107,51 @@ nav ul li:nth-child(2) {
     align-items: center;
 }
 
+.menu-mobile  {
+    position: relative;
+    background-color: var(--fondo-logo);
+    display: flex;
+    height: 50px;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 8px 0 #373737;
+}
+
+.menu-mobile .left-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.menu-mobile .left-menu img{
+    margin-left: 10px;
+    width: 40px;
+    height: 50px;
+}
+
+.menu-mobile .right-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.menu-mobile .right-menu img {
+    width: 150px;
+    height: 70px;
+}
+
+.menu-mobile  ul {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    align-items: center;
+}
 
 .aside-menu-mobile {
     display: flex;
@@ -158,8 +202,7 @@ nav ul li:nth-child(2) {
     align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    height: 870px;
-    width: 100%;
+    height: 670px;
 }
 
 .container-Favmichis {
@@ -195,8 +238,8 @@ nav ul li:nth-child(2) {
 }
 
 .container-Favmichis .michi-card {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     margin: 10px;
     overflow: hidden;
     border-radius: 8px;
@@ -205,8 +248,8 @@ nav ul li:nth-child(2) {
 }
 
 .michi-card img {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     z-index: 2;
 }
@@ -282,8 +325,8 @@ footer {
     height: 240px;
     background-color: var(--fondo-logo);
     padding: 30px;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    bottom: 0px;
     z-index: 1;
 }
 
@@ -449,7 +492,7 @@ footer .bye-message p {
 
 @media (max-width: 560px) {
     .container {
-        height: auto;
+        height: 670px;
     }
 
     .mensajito p {
@@ -486,7 +529,7 @@ footer .bye-message p {
         height: 180px;
     }
 
-    .menu-mobile {
+    .menu-desktop {
         display: none;
     }
 
