--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -331,3 +331,85 @@ footer .bye-message p {
     -webkit-transform: translate3d(0, 0, -1em);
     transform: translate3d(0, 0, -1em);
 }
+
+
+@media (max-width: 560px) {
+    .container {
+        height: auto;
+    }
+
+    .menu-desktop {
+        display: none;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 561px) and (max-width: 760px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 180px;
+        height: 180px;
+    }
+
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1080px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 250px;
+        height: 250px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 1081px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 300px;
+        height: 300px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
