--- a/CSS/videos.css
+++ b/CSS/videos.css
@@ -21,7 +21,7 @@ header img {
     width: 100%;
 }
 
-nav {
+.menu-desktop  {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -31,7 +31,7 @@ nav {
     box-shadow: 0 0 8px 0 #373737;
 }
 
-nav figure {
+.menu-desktop figure {
     display: flex;
     width: 20%;
     height: 100%;
@@ -40,13 +40,13 @@ nav figure {
     align-items: center;
 }
 
-nav figure img {
+.menu-desktop figure img {
     width: 150px;
     height: 70px;
     object-fit: cover;
 }
 
-nav ul {
+.menu-desktop  ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -58,16 +58,16 @@ nav ul {
     align-items: center;
 }
 
-nav ul a {
+.menu-desktop  ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
 
-nav ul a:hover {
+.menu-desktop  ul a:hover {
     cursor: pointer;
 }
 
-nav ul li {
+.menu-desktop  ul li {
     display: flex;
     width: 25%;
     height: 100%;
@@ -76,16 +76,63 @@ nav ul li {
     justify-content: center;
 }
 
-nav ul li:hover {
+.menu-desktop  ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
 
-nav ul li:nth-child(3) {
+.menu-desktop  ul li:nth-child(3) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+
+.menu-mobile  {
+    position: relative;
+    background-color: var(--fondo-logo);
+    display: flex;
+    height: 50px;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 8px 0 #373737;
+}
+
+.menu-mobile .left-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.menu-mobile .left-menu img{
+    margin-left: 10px;
+    width: 40px;
+    height: 50px;
+}
+
+.menu-mobile .right-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.menu-mobile .right-menu img {
+    width: 150px;
+    height: 70px;
+}
+
+.menu-mobile  ul {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
     align-items: center;
 }
 
@@ -129,7 +176,6 @@ nav ul li:nth-child(3) {
 .aside-menu-mobile ul li:hover {
     background-color: rgb(255, 181, 91);
 }
-
 
 .container {
     display: grid;
@@ -347,4 +393,86 @@ footer .bye-message p {
     box-shadow: 0 0 0 2px var(--naranja-bordes), 0 0 #fff3e2;
     -webkit-transform: translate3d(0, 0, -1em);
     transform: translate3d(0, 0, -1em);
+}
+
+
+@media (max-width: 560px) {
+    .container {
+        height: auto;
+    }
+
+    .menu-desktop {
+        display: none;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 561px) and (max-width: 760px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 180px;
+        height: 180px;
+    }
+
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1080px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 250px;
+        height: 250px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 1081px){
+    .container {
+        height: auto;
+    }
+    
+    .container-michis .michi-card {
+        width: 300px;
+        height: 300px;
+    }
+    .menu-mobile {
+        display: none;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+        justify-items: center;
+    }
 }
