--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -24,7 +24,7 @@ header img {
     width: 100%;
 }
 
-nav {
+.menu-desktop  {
     position: relative;
     background-color: var(--fondo-logo);
     display: flex;
@@ -34,7 +34,7 @@ nav {
     box-shadow: 0 0 8px 0 #373737;
 }
 
-nav figure {
+.menu-desktop figure {
     display: flex;
     width: 20%;
     height: 100%;
@@ -43,13 +43,13 @@ nav figure {
     align-items: center;
 }
 
-nav figure img {
+.menu-desktop figure img {
     width: 150px;
     height: 70px;
     object-fit: cover;
 }
 
-nav ul {
+.menu-desktop  ul {
     width: 80%;
     height: 100%;
     display: flex;
@@ -61,16 +61,16 @@ nav ul {
     align-items: center;
 }
 
-nav ul a {
+.menu-desktop  ul a {
     text-decoration: none;
     color: rgb(253, 252, 252);
 }
 
-nav ul a:hover {
+.menu-desktop  ul a:hover {
     cursor: pointer;
 }
 
-nav ul li {
+.menu-desktop  ul li {
     display: flex;
     width: 25%;
     height: 100%;
@@ -79,12 +79,12 @@ nav ul li {
     justify-content: center;
 }
 
-nav ul li:hover {
+.menu-desktop  ul li:hover {
     background-color: #fec576;
     border-bottom: 1px #f6b458;
 }
 
-nav ul li:nth-child(4) {
+.menu-desktop  ul li:nth-child(3) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -92,6 +92,52 @@ nav ul li:nth-child(4) {
     align-items: center;
 }
 
+
+.menu-mobile  {
+    position: relative;
+    background-color: var(--fondo-logo);
+    display: flex;
+    height: 50px;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 8px 0 #373737;
+}
+
+.menu-mobile .left-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.menu-mobile .left-menu img{
+    margin-left: 10px;
+    width: 40px;
+    height: 50px;
+}
+
+.menu-mobile .right-menu {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.menu-mobile .right-menu img {
+    width: 150px;
+    height: 70px;
+}
+
+.menu-mobile  ul {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    align-items: center;
+}
 
 .aside-menu-mobile {
     display: flex;
@@ -133,7 +179,6 @@ nav ul li:nth-child(4) {
 .aside-menu-mobile ul li:hover {
     background-color: rgb(255, 181, 91);
 }
-
 
 .container {
     display: flex;
