--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -13,6 +13,10 @@ body {
     margin: 0;
 }
 
+.hidden {
+    display: none !important;
+}
+
 header {
     width: 100%;
     height: 200px;
@@ -84,7 +88,7 @@ header img {
     border-bottom: 1px #f6b458;
 }
 
-.menu-desktop  ul li:nth-child(3) {
+.menu-desktop  ul li:nth-child(4) {
     background-color: #f5bd70;
     height: 100%;
     display: flex;
@@ -387,74 +391,19 @@ footer .bye-message p {
         display: none;
     }
     
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 10px;
-        justify-items: center;
-    }
 }
 
-@media (min-width: 561px) and (max-width: 760px){
+@media (min-width: 561px) and (max-width: 3600px){
     .container {
         height: auto;
     }
     
-    .container-michis .michi-card {
-        width: 180px;
-        height: 180px;
-    }
-
     .menu-mobile {
         display: none;
     }
 
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        justify-items: center;
-    }
-}
-
-@media (min-width: 760px) and (max-width: 1080px){
-    .container {
-        height: auto;
-    }
-    
-    .container-michis .michi-card {
-        width: 250px;
-        height: 250px;
-    }
-    .menu-mobile {
+    .aside-menu-mobile {
         display: none;
     }
 
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 10px;
-        justify-items: center;
-    }
-}
-
-@media (min-width: 1081px){
-    .container {
-        height: auto;
-    }
-    
-    .container-michis .michi-card {
-        width: 300px;
-        height: 300px;
-    }
-    .menu-mobile {
-        display: none;
-    }
-
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 10px;
-        justify-items: center;
-    }
 }
