--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -498,6 +498,9 @@ footer .bye-message p {
         height: auto !important;
     }
 
+    h4 {
+        font-size: 10px !important;
+    }
     .mensajito p {
         padding: 10px;
         width: 350px;
@@ -525,6 +528,9 @@ footer .bye-message p {
 @media (min-width: 561px) and (max-width: 760px){
     .container {
         height: auto !important;
+    }
+    h4 {
+        font-size: 10px !important;
     }
     
     .container-Favmichis .michi-card {
