--- a/styles.css
+++ b/styles.css
@@ -543,7 +543,9 @@ footer .bye-message p {
         height: auto;
     }
     
-
+    h4 {
+        font-size: 10px !important;
+    }
     .container-michis .michi-card {
         width: 180px;
         height: 180px;
