--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -388,7 +388,9 @@ footer .bye-message p {
     .container {
         height: auto;
     }
-
+    h4 {
+        font-size: 10px !important;
+    }
     .menu-desktop {
         display: none;
     }
