--- a/CSS/videos.css
+++ b/CSS/videos.css
@@ -398,6 +398,10 @@ footer .bye-message p {
         height: auto;
     }
 
+    h4 {
+        font-size: 10px !important;
+    }
+
     .menu-desktop {
         display: none;
     }
@@ -437,6 +441,9 @@ footer .bye-message p {
         height: auto;
     }
 
+    h4 {
+        font-size: 10px !important;
+    }
     .container-michis .michi-card {
         width: 250px;
         height: 250px;
