--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -391,6 +391,9 @@ footer .bye-message p {
     h4 {
         font-size: 10px !important;
     }
+    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+        font-size: 10px;
+    }
     .menu-desktop {
         display: none;
     }
