--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -532,6 +532,9 @@ footer .bye-message p {
     h4 {
         font-size: 10px !important;
     }
+    footer .social-networks ul,  footer .credits ul, footer .bye-message p{
+        font-size: 10px;
+    }
     
     .container-Favmichis .michi-card {
         width: 180px;
