--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -258,8 +258,10 @@ header img {
     width: 30px;
     height: 30px;
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.479);
     position: absolute;
     z-index: 1;
     right: 8px;
