--- a/CSS/videos.css
+++ b/CSS/videos.css
@@ -297,6 +297,27 @@ textarea {
 
 /* fin de boton submit */
 
+.mensaje-guardado {
+    width: auto;
+    text-align: center;
+    position: fixed;
+    bottom: 10%;
+    right: -2px;
+    transform: translateX(-50%);
+    background-color: #d38740;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 10;
+}
+
+.mensaje-guardado.mostrar {
+    opacity: 1;
+}
+
+
 
 footer {
     margin-top: 60px;
