--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -301,10 +301,11 @@ header img {
 
 .mensaje-guardado {
     width: auto;
+    height: auto;
     text-align: center;
     position: fixed;
     bottom: 10%;
-    right: -2px;
+    right: 10px;
     transform: translateX(-50%);
     background-color: #d38740;
     color: #ffffff;
