--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -435,6 +435,12 @@ footer .bye-message ul li a:hover {
     color: rgb(251, 233, 195);
 }
 
+footer p {
+    position: absolute;
+    bottom: 0;
+    font-size: 12px;
+    color: rgb(83, 83, 83);
+}
 
 @media (max-width: 560px) {
     .container {
