--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -332,6 +332,13 @@ footer .bye-message ul li a {
 footer .bye-message ul li a:hover {
     color: rgb(251, 233, 195);
 }
+
+footer p {
+    position: absolute;
+    bottom: 0;
+    font-size: 12px;
+    color: rgb(83, 83, 83);
+}
 .more-michis-button button {
     position: relative;
     display: inline-block;
