--- a/CSS/favorites.css
+++ b/CSS/favorites.css
@@ -441,6 +441,12 @@ footer .bye-message ul li a {
 footer .bye-message ul li a:hover {
     color: rgb(251, 233, 195);
 }
+footer p {
+    position: absolute;
+    bottom: 0;
+    font-size: 12px;
+    color: rgb(83, 83, 83);
+}
 .more-michis-button {
     display: flex;
     justify-content: center;
