--- a/styles.css
+++ b/styles.css
@@ -312,6 +312,7 @@ footer {
     justify-content: center;
     width: 100%;
     height: 240px;
+    position: relative;
     background-color: var(--fondo-logo);
     padding: 30px;
     box-sizing: border-box;
@@ -417,6 +418,13 @@ footer .bye-message ul li a {
 
 footer .bye-message ul li a:hover {
     color: rgb(251, 233, 195);
+}
+
+footer p {
+    position: absolute;
+    bottom: 0;
+    font-size: 12px;
+    color: rgb(83, 83, 83);
 }
 .more-michis-button {
     width: 100%;
